--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build template processor Docker image
-      run: docker build -t hhtemplate -f Dockerfile .
+      run: docker build -t hh-templates -f Dockerfile .
     - name: Build template test automation Docker image
-      run: docker build -t hhtemplatetest -f test/Dockerfile test
+      run: docker build -t hh-templates-test -f test/Dockerfile test
     - name: Run tests
-      run: docker run --name hhtemplatetest -t hhtemplatetest | tee test-log.txt
+      run: docker run --name hh-templates-test -t hh-templates-test | tee test-log.txt
     - name: Upload test logs
       uses: actions/upload-artifact@v1
       with:
         name: test-log.txt
         path: test-log.txt
     - name: Copy test cases from container
-      run: docker cp hhtemplatetest:/tmp/cases test_cases
+      run: docker cp hh-templates-test:/tmp/cases test_cases
     - name: Upload test cases
       uses: actions/upload-artifact@v1
       with:
